--- a/internal/templates/app/familjet.html
+++ b/internal/templates/app/familjet.html
@@ -3,19 +3,19 @@
     <h1>Krijo Familje</h1>
     <form id="family-form" method="POST" action="/api/v1/families">
         <div class="row g-3">
-            <div class="md-3">
+            <div class="col-lg-2 col-md-6">
                 <input id="name" name="name" type="text" placeholder='Emri' class="form-control" />
             </div>
-            <div class="md-3">
+            <div class="col-lg-2 col-md-6">
                 <input id="middle_name" name="middle_name" type="text" placeholder="Emri i Prindit" class="form-control" />
             </div>
-            <div class="md-3">
+            <div class="col-lg-2 col-md-6">
                 <input id="surname" name="surname" type="text" placeholder="Mbiemri" class="form-control" />
             </div>
-            <div class="md-3">
+            <div class="col-lg-2 col-md-6">
                 <input id="members" name="members" type="number" placeholder="Numri i anetareve" class="form-control" />
             </div>
-            <div class="md-3">
+            <div class="col-lg-2 col-md-6">
                 <select id="neighbourhood_id" name="neighbourhood_id" class="form-control">
                     <option value="" disabled selected>Zgjidh lagjen</option>
                     {{range .Neighbourhoods}}
@@ -23,7 +23,7 @@
                     {{end}}
                 </select>
             </div>
-            <div class="md-3">
+            <div class="col-lg-2 col-md-6">
                 <button type="submit" class="btn btn-primary">
                     <i class="fas fa-floppy-disk"></i> Ruaj
                 </button>
@@ -34,36 +34,38 @@
 </div>
 <div class="container">
     <h3>Lista e familjeve</h3>
-    <table class="table" style="overflow-x: auto; display: block;">
-        <thead>
-            <tr>
-                <th>Emri</th>
-                <th>Prindi</th>
-                <th>Mbimeri</th>
-                <th>Numri i antareve</th>
-                <th>Lagje</th>
-                <th>Krijuar me</th>
-                <th>Ndryshuar me</th>
-                <th>Ndrysho</th>
-                <th>Fshi</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{range .Families}}
-            <tr>
-                <td>{{.Family.Name}}</td>
-                <td>{{.Family.Middlename}}</td>
-                <td>{{.Family.Surname}}</td>
-                <td>{{.Family.Members}}</td>
-                <td>{{.Neighbourhood}}</td>
-                <td>{{.Family.CreatedAt}}</td>
-                <td>{{.Family.UpdatedAt}}</td>
-                <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="updateModal('{{.Family.ID}}', '{{.Family.Name}}', '{{.Family.Middlename}}', '{{.Family.Surname}}', '{{.Family.Members}}', '{{.Family.NeighbourhoodID}}')"><i class="fa-solid fa-pen-to-square"></i></button></td>
-                <td><button type="button" class="btn btn-danger" onclick="deleteFamily('{{.Family.ID}}')"><i class="fa-solid fa-trash"></i></button></td>
-            </tr>
-            {{end}}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Emri</th>
+                    <th>Prindi</th>
+                    <th>Mbimeri</th>
+                    <th>Numri i antareve</th>
+                    <th>Lagje</th>
+                    <th>Krijuar me</th>
+                    <th>Ndryshuar me</th>
+                    <th>Ndrysho</th>
+                    <th>Fshi</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{range .Families}}
+                <tr>
+                    <td>{{.Family.Name}}</td>
+                    <td>{{.Family.Middlename}}</td>
+                    <td>{{.Family.Surname}}</td>
+                    <td>{{.Family.Members}}</td>
+                    <td>{{.Neighbourhood}}</td>
+                    <td>{{.Family.CreatedAt}}</td>
+                    <td>{{.Family.UpdatedAt}}</td>
+                    <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="updateModal('{{.Family.ID}}', '{{.Family.Name}}', '{{.Family.Middlename}}', '{{.Family.Surname}}', '{{.Family.Members}}', '{{.Family.NeighbourhoodID}}')"><i class="fa-solid fa-pen-to-square"></i></button></td>
+                    <td><button type="button" class="btn btn-danger" onclick="deleteFamily('{{.Family.ID}}')"><i class="fa-solid fa-trash"></i></button></td>
+                </tr>
+                {{end}}
+            </tbody>
+        </table>
+    </div>
     <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
