--- a/internal/templates/app/pagesat.html
+++ b/internal/templates/app/pagesat.html
@@ -34,6 +34,55 @@
     <br />
 </div>
 <div class="container">
+    <h3>Kerko pagesat sipas vitit ose familjes</h3>
+    <form id="payments-filter-form" method="GET" action="/pagesat">
+        <div class="row g-3">
+            <div class="col-lg-3 col-md-6">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="search_type" id="searchByYear" value="year" checked>
+                    <label class="form-check-label" for="searchByYear">
+                        Kerko sipas vitit
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="search_type" id="searchByFamily" value="family">
+                    <label class="form-check-label" for="searchByFamily">
+                        Kerko sipas familjes
+                    </label>
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="row g-3">
+            <div class="col-lg-3 col-md-6">
+                <input id="s_year" name="s_year" type="number" placeholder="Viti" class="form-control" />
+            </div>
+        </div>
+        <div class="row g-3">
+            <div class="col-lg-3 col-md-6">
+                <select id="s_family_id" name="s_family_id" class="form-control" style="display: none;">
+                    <option value="" disabled selected>Zgjidh familjen</option>
+                    {{range .Families}}
+                    <option value="{{.ID}}" data-members="{{.Members}}">{{.Name}} {{.Middlename}} {{.Surname}}</option>
+                    {{end}}
+                </select>
+            </div>
+        </div>
+        <br />
+        <div class="row g-3">
+            <div class="col-lg-3 col-md-6">
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-search"></i> Kerko
+                </button>
+            </div>
+            <br />
+        </div>
+    </form>
+    <br />
+</div>
+<div class="container">
     <h3>Lista e pagesave</h3>
     <div class="table-responsive">
         <table class="table">
