MOSQ-027: implement invoice generation

--- a/internal/templates/app/pagesat.html
+++ b/internal/templates/app/pagesat.html
@@ -22,7 +22,7 @@
                 <input id="year" name="year" type="number" placeholder="Viti" class="form-control" />
             </div>
             <div id="placeholder" class="col-lg-3 col-md-6">
-                <input id="range_year" name="range_year" type="number" placeholder="Viti i pageses" class="form-control" hidden disabled/>
+                <input id="range_year" name="range_year" type="number" placeholder="Deri ne vitin" class="form-control" hidden disabled/>
             </div>
             <div class="col-lg-3 col-md-6">
                 <button type="submit" class="btn btn-primary">
