--- a/internal/templates/app/pagesat-pakryera.html
+++ b/internal/templates/app/pagesat-pakryera.html
@@ -17,6 +17,12 @@
 </div>
 <div class="container">
     <h3>Lista e familjeve papaguar per vitin <span id="yearSpan"></span></h3>
+    <div class="row g-3">
+        <div class="col-12 text-end">
+            <button type="button" class="btn btn-secondary" onclick="exportToPDF(getYearFromQueryParam())">
+                <i class="fas fa-file-pdf"></i> Genero Faturat
+            </button>
+        </div>
     <div class="table-responsive">
         <table class="table">
             <thead>
