MOSQ-027: update InvoicesService to include neighborhood information

--- a/internal/templates/app/pagesat-pakryera.html
+++ b/internal/templates/app/pagesat-pakryera.html
@@ -20,7 +20,7 @@
     <div class="row g-3">
         <div class="col-12 text-end">
             <button type="button" class="btn btn-secondary" onclick="exportToPDF(getYearFromQueryParam())">
-                <i class="fas fa-file-pdf"></i> Genero Faturat
+                <i class="fas fa-file-pdf"></i> Gjenero Faturat
             </button>
         </div>
     <div class="table-responsive">
