--- a/internal/templates/layout-noauth.html
+++ b/internal/templates/layout-noauth.html
@@ -16,7 +16,10 @@
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
             <div class="border-end bg-white" id="sidebar-wrapper">
-                <div class="sidebar-heading border-bottom bg-light">Xhamia Qender</div>
+                <div class="sidebar-heading border-bottom bg-light" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                    <img src="app/assets/favicon.ico" alt="Logo" height="60px">
+                    <span>Xhamia Qender</span>
+                </div>
                 <div class="list-group list-group-flush">
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/">Fillimi</a>
                 </div>
@@ -26,7 +29,7 @@
                 <!-- Top navigation-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                     <div class="container-fluid">
-                        <button class="btn btn-primary" id="sidebarToggle"><i class="fa-solid fa-bars"></i></button>
+                        <button class="btn btn-success" id="sidebarToggle"><i class="fa-solid fa-bars"></i></button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
