--- a/internal/templates/app/lagjet.html
+++ b/internal/templates/app/lagjet.html
@@ -77,7 +77,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <p>A jeni i sigurt qe deshironi te fshini kete pagese?</p>
+                                    <p>A jeni i sigurt qe deshironi te fshini kete lagje?</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anulo</button>
